RESOLVED FIXED243765
[Painting] TextDecorationPainter should not take RenderStyle
https://bugs.webkit.org/show_bug.cgi?id=243765
Summary [Painting] TextDecorationPainter should not take RenderStyle
alan
Reported 2022-08-09 20:24:58 PDT
ssia
Attachments
Patch (13.86 KB, patch)
2022-08-09 20:29 PDT, alan
no flags
Patch (13.78 KB, patch)
2022-08-11 07:07 PDT, alan
no flags
[fast-cq]Patch (13.78 KB, patch)
2022-08-11 16:11 PDT, alan
no flags
alan
Comment 1 2022-08-09 20:29:36 PDT
alan
Comment 2 2022-08-11 07:07:55 PDT
alan
Comment 3 2022-08-11 16:11:47 PDT
Created attachment 461550 [details] [fast-cq]Patch
EWS
Comment 4 2022-08-11 16:31:39 PDT
Committed 253353@main (cc23f291cc1f): <https://commits.webkit.org/253353@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461550 [details].
Radar WebKit Bug Importer
Comment 5 2022-08-11 16:32:16 PDT
Note You need to log in before you can comment on or make changes to this bug.