Cherry-pick cc23f291cc1f. rdar://problem/101004049

[Painting] TextDecorationPainter should not take RenderStyle
    https://bugs.webkit.org/show_bug.cgi?id=243765

    Reviewed by Antti Koivisto.

    This enables us to reuse the TextDecorationPainter object when we need to paint multiple inline box decorations for a given text box.

    * Source/WebCore/rendering/TextBoxPainter.cpp:
    (WebCore::TextBoxPainter<TextBoxPath>::createDecorationPainter):
    (WebCore::TextBoxPainter<TextBoxPath>::paintBackgroundDecorations):
    (WebCore::TextBoxPainter<TextBoxPath>::paintForegroundDecorations):
    * Source/WebCore/rendering/TextDecorationPainter.cpp:
    (WebCore::strokeWavyTextDecoration):
    (WebCore::TextDecorationPainter::TextDecorationPainter):
    (WebCore::TextDecorationPainter::paintBackgroundDecorations):
    (WebCore::TextDecorationPainter::paintLineThrough):
    (WebCore::TextDecorationPainter::stylesForRenderer):
    * Source/WebCore/rendering/TextDecorationPainter.h:
    * Source/WebCore/style/InlineTextBoxStyle.cpp:
    (WebCore::wavyStrokeParameters):
    (WebCore::computedVisualOverflowForDecorations):
    (WebCore::getWavyStrokeParameters): Deleted.
    * Source/WebCore/style/InlineTextBoxStyle.h:

    Canonical link: https://commits.webkit.org/253353@main

Canonical link: https://commits.webkit.org/252432.758@safari-7614-branch